--- a/docs/style.css
+++ b/docs/style.css
@@ -43,7 +43,7 @@ table {
     height: 100%;
     float: left;
     overflow: hidden;
-    background-image: url("https://video-images.vice.com/articles/5fa183b1c2298000957e2869/lede/1604420641868-n64papermariopkbu98s.jpeg");
+    background-image: url("papermario.jpeg");
     background-size: cover;
     opacity: 0.4;
     background-color: bisque;
